# benchmarkoor-fetch

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md  e2e_testing_plan.md  implementation_plan.md  unit_testing_plan.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/api/: client.md  config.md  parse.md  result.md
examples/: quickstart.ipynb
src/benchmarkoor_fetch/: __init__.py  _reporter.py  cli.py  config.py  pipeline.py  result.py
src/benchmarkoor_fetch/client/: __init__.py  cache.py  runs.py  session.py  suites.py  test_stats.py  traces.py
src/benchmarkoor_fetch/parse/: __init__.py  opcount.py  precompiles.py  titles.py
src/benchmarkoor_fetch/parse/data/: opcodes_in_test_name.txt
tests/: test_cache.py  test_cli.py  test_client_http.py  test_config.py  test_opcount.py  test_reporter.py  test_titles_parser.py
tests/data/: sample_test_titles.txt  sample_test_titles_expected.csv
tests/data/e2e/: fetch.yaml
tests/data/e2e/golden_outputs/: bench_data.parquet  meta.json  opcounts.json  runtimes.csv  trace.parquet
tests/data/e2e/responses/: runs.json  suites.json  summary.json  test_stats_page1.json  test_stats_page2.json  test_stats_page3.json
tests/data/e2e/variants/: auth_401.json  unparsed_titles.json  unparsed_titles_15.json
tests/data/e2e/variants/test_stats_502_then_200/: response_2_502.json  response_3_200.json
tests/data/e2e/variants/test_stats_one_empty/: run_001_page1.json  run_002_empty.json  run_003_page1.json
tests/data/http/: runs_three.json  suites_two_matching.json  summary_minimal.json  test_stats_page1.json  test_stats_page2.json
tests/data/opcount/: precompile_opcode.parquet  regular_opcode.parquet  unknown_opcode.parquet
tests/e2e/: conftest.py  test_cache_lifecycle.py  test_cli_run.py  test_cli_suites.py  test_errors.py  test_library_api.py  test_outputs.py
