[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmarkoor-fetch"
version = "0.1.0"
description = "Fetch EVM benchmark suites from the Benchmarkoor API and produce clean tabular outputs."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Maria Silva", email = "misilva73@gmail.com" }]
keywords = ["ethereum", "evm", "benchmarks", "gas", "benchmarkoor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests",
    "pandas",
    "numpy",
    "pydantic>=2",
    "pyyaml",
    "tqdm",
    "pyarrow",
]

[project.urls]
Homepage = "https://github.com/misilva73/benchmarkoor-fetch"
Documentation = "https://misilva73.github.io/benchmarkoor-fetch/"
Repository = "https://github.com/misilva73/benchmarkoor-fetch"
Issues = "https://github.com/misilva73/benchmarkoor-fetch/issues"
Changelog = "https://github.com/misilva73/benchmarkoor-fetch/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "responses",
    "ruff",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.scripts]
benchmarkoor-fetch = "benchmarkoor_fetch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"benchmarkoor_fetch.parse" = ["data/*.txt"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
